# thymis-modules

./: README.md  flake.nix  pyproject.toml
thymis_modules/: modules.py
